# plugins

./: .gitignore  Cargo.toml  DEPENDENTS.md  LICENSE  README.md  clippy.toml  cspell.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: Node.yml  Rust.yml
crates/swc_icu_messageformat_parser/: Cargo.toml
crates/swc_icu_messageformat_parser/Source/: ast.rs  parser.rs  pattern_syntax.rs
crates/swc_icu_messageformat_parser/Source/intl/: date_time_format_options.rs  number_format_options.rs  options.rs
scripts/dev/: cleanup_test_log.js
xtask/: Cargo.toml
xtask/Source/: main.rs  update.rs
